--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Generate Datas
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* * */2 * *"
+    - cron: "* */30 * * *"
   workflow_dispatch:
 
 jobs:
